# e-tron

./: .gitignore  CMakeLists.txt  README.md  config.ini  package-lock.json  tron.sln  tron.vcxproj  tron.vcxproj.filters
compteRendu/: .gitgnore  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  main.toc  myClass.cls  references.bib
compteRendu/part/: part1.aux  part1.tex  part2.aux  part2.tex  part3.aux  part3.tex  part4.aux  part4.tex  part5.aux  part5.tex  part6.aux  part6.tex  part7.aux  part7.tex
rapport/: main.aux  main.fdb_latexmk  main.fls  main.toc
rapport/part/: part1.aux  part1.tex  part2.aux  part2.tex  part3.aux  part3.tex  part4.aux  part4.tex  part5.aux  part5.tex  part6.aux  part6.tex  part7.aux  part7.tex
src/: main.cpp  mainFunctions.cpp  mainFunctions.h  reader.cpp  testMain.cpp  winMain.cpp
src/algorithms/: algorithmUtils.cpp  algorithmUtils.h  autoMoveSmart.cpp  autoMoveSmart.h  autoMoveSos.cpp  autoMoveSos.h  maxnAlgorithm.cpp  maxnAlgorithm.h  paranoidAlgorithm.cpp  paranoidAlgorithm.h
src/algorithms/analysis/: maxnAlgorithm.cpp  maxnAlgorithm.h  paranoidAlgorithm.cpp  paranoidAlgorithm.h
src/algorithms/moving/: IMovingAlgorithm.h  autoMoveBFS.cpp  autoMoveBFS.h  autoMoveSmart.cpp  autoMoveSmart.h  autoMoveSos.cpp  autoMoveSos.h  movingAlgorithmsManager.cpp  movingAlgorithmsManager.h
src/entity/: gameEntity.cpp  gameEntity.h  player.cpp  player.h  wall.cpp  wall.h
src/graphics/: app.cpp  app.h  appTimer.cpp  appTimer.h  color.cpp  color.h  image.cpp  image.h  keyboardManager.cpp  keyboardManager.h  renderer.cpp  renderer.h  resource.rc  setUpWindows.h  window.cpp  window.h
src/graphics/core/: renderer.cpp  renderer.h  window.cpp  window.h
src/graphics/core/event/: eventManager.h  keyboardEventManager.cpp  keyboardEventManager.h  mouseEventManager.cpp  mouseEventManager.h
src/graphics/core/exception/: hrException.cpp  hrException.h  rendererException.h  windowException.h
src/graphics/core/render/: renderer.cpp  renderer.h
src/graphics/core/resource/: resource.rc
src/graphics/event/: eventManager.cpp  eventManager.h  keyboardEventManager.cpp  keyboardEventManager.h  mouseEventManager.cpp  mouseEventManager.h
src/graphics/exception/: hrException.cpp  hrException.h  rendererException.h  windowException.h
src/graphics/exception/rendererException/: deviceRemovedException.h  dxgiInfoManager.cpp  dxgiInfoManager.h  infoOnlyException.cpp  infoOnlyException.h  rendererHrException.cpp  rendererHrException.h
src/graphics/exception/windowException/: noRendererException.h  windowHrException.h
src/graphics/gameObjects/: BasicMotorcycle.cpp  BasicMotorcycle.h  graphicsGameEntity.h  graphicsPlayer.cpp
src/graphics/objects/: camera.cpp  camera.h  coloredCube.cpp  cube.cpp  cube.h  doubleTore.cpp  doubleTore.h  drawable.cpp  drawable.h  light.cpp  light.h  lightManager.cpp  lightManager.h  object.cpp  object.h  objects.h  squarePyramid.cpp  squarePyramid.h  texturedCube.cpp  texturedCube.h
src/graphics/objects/basicObjects/: basicObjects.h  drawable.cpp  drawable.h
src/graphics/objects/bindable/: bindable.cpp  bindable.h  bindableBase.h  inputLayout.cpp  inputLayout.h  samplerState.cpp  samplerState.h  texture.cpp  texture.h  topology.cpp  topology.h
src/graphics/objects/cube/: coloredCube.cpp  coloredCube.h  cube.cpp  cube.h  texturedCube.cpp
src/graphics/objects/cylinder/: coloredCylinder.h  coloredCylinderTruncated.cpp  coloredCylinderTruncated.h  cylinder.cpp  cylinder.h  cylinderTruncated.h
src/graphics/objects/drawable/: cubeGrid.cpp  cubeGrid.h  doubleTore.cpp  doubleTore.h  drawable.cpp  drawable.h  motorPlayer.cpp  motorPlayer.h  object.h  skyBox.cpp  skyBox.h
src/graphics/objects/gameObjects/: BasicMotorcycle.h  cubeGrid.h  graphicsGameEntity.cpp  graphicsGameEntity.h  graphicsPlayer.h  motorPlayer.h
src/graphics/objects/materials/: colorMaterial.cpp  colorMaterial.h  material.cpp  material.h  textureMaterial.cpp  textureMaterial.h
src/graphics/objects/meshes/: basicObjects.h  mesh.cpp  mesh.h  meshes.h
src/graphics/objects/pyramid/: coloredSquarePyramid.cpp  coloredSquarePyramid.h  squarePyramid.cpp  squarePyramid.h  texturedSquarePyramid.cpp  texturedSquarePyramid.h
src/graphics/objects/sphere/: coloredSphere.cpp  coloredSphere.h  sphere.h
src/graphics/objects/tore/: coloredTore.cpp  tore.h
src/graphics/resource/: resource.rc
src/graphics/scenes/: gameScene.cpp  gameScene.h  loadingScene.cpp  loadingScene.h  scene.cpp  scene.h  sceneManager.cpp  sceneManager.h  scenes.h
src/graphics/shaders/: VS.hlsl  coloredCubePS.hlsl  coloredCylinderPS.hlsl  coloredCylinderTruncatedPS.hlsl  coloredMotorcyclePS.hlsl  coloredSpherePS.hlsl  coloredSquarePyramidPS.hlsl  cubeColorIndexedPS.hlsl  defaultVS.hlsl  geometryShader.hlsl  pixelShader.hlsl  squarePyramidColorIndexedPS.hlsl  texturePS.hlsl  textureVS.hlsl  vertexShader.hlsl
src/graphics/utils/: appTimer.cpp  appTimer.h  color.cpp  color.h  image.cpp  image.h  setUpWindows.h
src/manager/: dataExportManager.cpp  dataExportManager.h  dataLogManager.cpp  dataLogManager.h  gameManager.cpp  gameManager.h  inputManager.cpp  inputManager.h  mapManager.cpp  mapManager.h
src/map/: cell.cpp  cell.h  grid.cpp  grid.h
src/test/: mainTest.cpp
src/test/entity/: test_entity.cpp  test_entity.h  test_gameEntity.cpp  test_player.cpp  test_wall.cpp
src/test/map/: test_grid.cpp  test_map.cpp  test_map.h
src/utils/: affinitiesMatrixGenerator.cpp  affinitiesMatrixGenerator.h  colorEnum.cpp  colorEnum.h  configLoader.cpp  configLoader.h  dataLinker.cpp  dataLinker.h  eTronException.cpp  eTronException.h  jsonWriter.cpp  jsonWriter.h  mainFunctions.cpp  mainFunctions.h  tronException.cpp  tronException.h  updatable.h  utils.h
web/: index.html  package-lock.json  package.json
web/src/: index.module.scss  main.tsx
web/src/components/: App.tsx
web/src/components/chartjs/: RadarChart.tsx  anneau.tsx
web/src/components/common/: FileButton.tsx  Toggle.tsx  useFileSelector.tsx
web/src/store/: formatFileData.ts  json.tsx
(+177 files in other folders)
